--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,22 @@
-<h1> Hello</h1>
+
+<html>
+  <body>
+    <h1>This is a layout</h1>
+    <p>
+      <h3> I'm a header and I'm wacko</h3>
+      <p>Add things to me</p>
+      <a href='me.html'>This Links to Me cause</a>
+      <a href='http://google.com'>Google</a>
+      <a href='me.html'>Links to Me</a>
+      <a href='danny.html'>Links to Danny</a>
+
+    </p>
+    <hr />
+    <div>
+      <h1> Hello</h1>
 <p>
   The time is now:
-  2013-01-08 15:31:57 -0600
+  2013-01-08 15:55:12 -0600
 </p>
 
 <p>
@@ -9,3 +24,13 @@
   
 </p>
 
+
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer and I'm bonkers</h3>
+      <p>stick stuff down here</p>
+      <a href='index.html'>Links to the Index</a>
+    </div>
+  </body>
+</html>
