--- a/public/danny.html
+++ b/public/danny.html
@@ -13,7 +13,26 @@
     </p>
     <hr />
     <div>
-      foo
+      <h1> Welcome to my website!</h1>
+<body>
+	<div>
+		<ul>
+			
+			<li>I like cats</li>
+			
+			<li>I like dogs</li>
+			
+			<li>I like horses</li>
+			
+		</ul>
+	</div>
+	<div>
+		Whats Going on over Here?!
+	</div>
+	<div>
+		This is a <span> span
+	</div>
+</body>
     </div>
     <hr />
     <div>
